--- a/src/app/components/add-workout/add-workout.component.html
+++ b/src/app/components/add-workout/add-workout.component.html
@@ -1,21 +1,34 @@
 <div class="container">
     <h2>Add Workout</h2>
-    <form (ngSubmit)="onSubmit()" [formGroup]="workoutForm">
+    <form [formGroup]="workoutForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-            <label for="workoutTitle">UserName</label>
-            <input type="text" class="form-control" id="UserName" formControlName="UserName">
+            <label for="userName">UserName</label>
+            <input type="text" 
+                   class="form-control" 
+                   id="userName" 
+                   formControlName="userName">
+        </div>
 
-            <label>Workout Type:</label>
-            <select [(ngModel)]="workoutType" name="workoutType">
-            <option value="Running">Running</option>
-            <option value="Cycling">Cycling</option>
-            <option value="Yoga">Yoga</option>
-            <option value="Strength Training">Strength Training</option>
+        <div class="form-group">
+            <label for="workoutType">Workout Type:</label>
+            <select class="form-control"
+                    id="workoutType"
+                    formControlName="workoutType">
+                <option value="Running">Running</option>
+                <option value="Cycling">Cycling</option>
+                <option value="Yoga">Yoga</option>
+                <option value="Strength Training">Strength Training</option>
             </select>
+        </div>
 
-            <label>Workout Minutes:</label>
-            <input type="number" [(ngModel)]="workoutMinutes" name="workoutMinutes" required />
+        <div class="form-group">
+            <label for="workoutMinutes">Workout Minutes:</label>
+            <input type="number" 
+                   class="form-control"
+                   id="workoutMinutes" 
+                   formControlName="workoutMinutes">
+        </div>
 
-            <button type="submit">Add Workout</button>
-        </form>
+        <button type="submit" [disabled]="!workoutForm.valid">Add Workout</button>
+    </form>
 </div>
