--- a/src/app/components/add-workout/add-workout.component.html
+++ b/src/app/components/add-workout/add-workout.component.html
@@ -1,8 +1,8 @@
 <div class="min-h-screen bg-gray-50 py-8">
-    <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-6">
+    <div class="max-w-screen mx-auto rounded-lg  p-6">
         <h2 class="text-2xl font-bold text-gray-800 mb-6">Add Workout</h2>
         
-        <form [formGroup]="workoutForm" (ngSubmit)="onSubmit()" class="space-y-4">
+        <form [formGroup]="workoutForm" (ngSubmit)="onSubmit()" class="grid grid-cols-4 gap-6">
             <div class="space-y-2">
                 <label for="userName" class="block text-sm font-medium text-gray-700">
                     Username
@@ -54,7 +54,10 @@
                  class="text-red-500 text-sm mt-1">
                 Username is required
             </div>
-            
+            <div *ngIf="workoutForm.get('workoutType')?.touched && workoutForm.get('workoutType')?.invalid" 
+                class="text-red-500 text-sm mt-1">
+                Workout type is required
+            </div>
             <div *ngIf="workoutForm.get('workoutMinutes')?.touched && workoutForm.get('workoutMinutes')?.invalid" 
                  class="text-red-500 text-sm mt-1">
                 <span *ngIf="workoutForm.get('workoutMinutes')?.errors?.['required']">
