added the base layout for workout list hardcoded the workouts for now

--- a/src/app/components/workout-list/workout-list.component.html
+++ b/src/app/components/workout-list/workout-list.component.html
@@ -1,1 +1,24 @@
-<p>workout-list works!</p>
+<div class="container">
+    <h2>Workout List</h2>
+    
+    <input type="text" [(ngModel)]="searchTerm" placeholder="Search by name" />
+  
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Workout Type</th>
+          <th>Minutes</th>
+          <th>Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let workout of filteredWorkouts">
+          <td>{{ workout.UserName }}</td>
+          <td>{{ workout.workoutType }}</td>
+          <td>{{ workout.workoutMinutes }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
