--- a/src/app/components/add-workout/add-workout.component.html
+++ b/src/app/components/add-workout/add-workout.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-50 py-8">
+<div class=" bg-gray-50 py-8">
     <div class="max-w-screen mx-auto rounded-lg  p-6">
         <h2 class="text-2xl font-bold text-gray-800 mb-6">Add Workout</h2>
         
