--- a/src/app/components/workout-list/workout-list.component.html
+++ b/src/app/components/workout-list/workout-list.component.html
@@ -1,7 +1,6 @@
 <div>
   <h2 class="text-xl font-bold mb-4">Workout List</h2>
 
-  <!-- Filter Dropdown -->
   <div class="mb-4">
     <label class="block mb-1 font-medium text-gray-700">Filter by Type:</label>
     <select (change)="filterWorkout($event)" class="w-full p-2 border border-gray-300 rounded-md">
@@ -13,9 +12,9 @@
     </select>
   </div>
 
-  <!-- Workout List -->
   <ul class="divide-y divide-gray-300">
     <li *ngFor="let workout of filteredWorkouts" class="p-2 flex justify-between">
+      <!-- <span class="font-semibold">{{ workout.user.name }}</span> -->
       <span class="font-semibold">{{ workout.type }}</span>
       <span>{{ workout.minutes }} min</span>
     </li>
