--- a/src/app/components/add-workout/add-workout.component.html
+++ b/src/app/components/add-workout/add-workout.component.html
@@ -1,12 +1,10 @@
 <div>
     <h2 class="text-xl font-bold mb-4">Add Workout</h2>
   
-    <!-- Select User -->
-    <label class="block mb-1 font-medium">Select User:</label>
-    <select [(ngModel)]="selectedUserId" class="w-full p-2 border border-gray-300 rounded-md">
-      <option [value]="null" disabled>Select a user</option>
-      <option *ngFor="let user of users" [value]="user.id">{{ user.name }}</option>
-    </select>
+
+    <label class="block mb-1 font-medium">Enter User Name:</label>
+    <input type="text" [(ngModel)]="UserName" class="w-full p-2 border border-gray-300 rounded-md" placeholder="Enter user name"/>
+
   
     <!-- Select Workout Type -->
     <label class="block mt-4 mb-1 font-medium">Workout Type:</label>
