main implementation is done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,9 @@
     <div class="max-w-full mx-auto p-6 rounded-lg ">
       <app-workout-list></app-workout-list>
     </div>
+    <div class="max-w-full mx-auto p-6 rounded-lg ">
+      <app-workout-chart></app-workout-chart>
+    </div>
+
   </div>
   
