--- a/src/app/components/workout-list/workout-list.component.html
+++ b/src/app/components/workout-list/workout-list.component.html
@@ -2,6 +2,11 @@
   <h2 class="text-xl font-bold mb-4">Workout List</h2>
 
   <div class="mb-4">
+    <label class="block mb-1 font-medium text-gray-700">Filter by User:</label>
+    <input type="text" [(ngModel)]="filteredName" (input)="filterByUser()" class="w-full p-2 border border-gray-300 rounded-md" placeholder="Search by user name"/>
+  </div>
+
+  <div class="mb-4">
     <label class="block mb-1 font-medium text-gray-700">Filter by Type:</label>
     <select (change)="filterWorkout($event)" class="w-full p-2 border border-gray-300 rounded-md">
       <option value="">All</option>
@@ -13,10 +18,36 @@
   </div>
 
   <ul class="divide-y divide-gray-300">
-    <li *ngFor="let workout of filteredWorkouts" class="p-2 flex justify-between">
-      <!-- <span class="font-semibold">{{ workout.user.name }}</span> -->
+    <li *ngFor="let workout of paginatedWorkouts" class="p-2 flex justify-between">
+      <span class="font-semibold">{{ workout.user }}</span> 
       <span class="font-semibold">{{ workout.type }}</span>
       <span>{{ workout.minutes }} min</span>
     </li>
   </ul>
+
+  <!-- Pagination Controls -->
+  <div class="flex justify-between items-center mt-4">
+    <button 
+      (click)="prevPage()" 
+      [disabled]="currentPage === 1"
+      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300 disabled:cursor-not-allowed">
+      Previous
+    </button>
+
+    <div class="flex items-center space-x-4">
+      <label for="itemsPerPage" class="text-sm font-medium">Items per page:</label>
+      <select id="itemsPerPage" [(ngModel)]="itemsPerPage" (change)="paginate()" class="px-2 py-1 border rounded-md">
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="15">15</option>
+      </select>
+    </div>
+
+    <button 
+      (click)="nextPage()" 
+      [disabled]="currentPage * itemsPerPage >= filteredWorkouts.length"
+      class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 disabled:bg-gray-300 disabled:cursor-not-allowed">
+      Next
+    </button>
+  </div>
 </div>
